<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editText_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/record_back_search_bar"
            android:ems="10"
            android:hint="@string/record_search_hint"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="12sp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/record_button_search"
            android:minHeight="0dip"
            android:minWidth="0dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <CheckBox
            android:id="@+id/checkBox1place"
            style="@style/RecordCheckBox"
            android:text="@string/record_place" />

        <CheckBox
            android:id="@+id/checkBox2"
            style="@style/RecordCheckBox"
            android:text="@string/record_cook" />

        <CheckBox
            android:id="@+id/checkBox3enjoy"
            style="@style/RecordCheckBox"
            android:text="@string/record_enjoy" />

        <CheckBox
            android:id="@+id/checkBox4stay"
            style="@style/RecordCheckBox"
            android:text="@string/record_stay" />

        <CheckBox
            android:id="@+id/checkBox5"
            style="@style/RecordCheckBox"
            android:text="@string/record_guitar" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_heart_sort"
                style="@style/RadioButtonSort"
                android:layout_toLeftOf="@+id/radio_review_sort"
                android:background="@drawable/radio_selector_sort_background"
                android:button="@drawable/radio_selector_heart_sort_icon"
                android:text="@string/record_heart_sort" />

            <RadioButton
                android:id="@+id/radio_review_sort"
                style="@style/RadioButtonSort"
                android:layout_alignParentRight="true"
                android:background="@drawable/radio_selector_sort_background"
                android:button="@drawable/radio_selector_review_sort_icon"
                android:text="@string/record_review_sort" />

        </RadioGroup>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <Button
            android:id="@+id/button_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="50dp"
            android:background="@drawable/record_button_camera" />

    </FrameLayout>

</LinearLayout>